--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -13,6 +13,10 @@ body {
   background-size: cover;
 }
 
+#chartdiv {
+  position: absolute !important; top: 150px; background: transparent;
+}
+
 h1,
 h2,
 h3,
